A draft fix for CMYK blending modes

This patch is a draft only. We need to decide what to do with the
following modes as well (they are not touches atm):

* Over
* Copy
* Alpha Darken
* Erase
* Behind
* Destination In
* Destination Atop
* Greater
* Dissolve
* LuminositySAI

Most probably, all the blendmodes except Greater, Dissolve and
LuminositySAI don't need any changes, though it needs checking.

BUG:424525